# VeevaVaultMCP

./: API_V25R2_ENDPOINT_TRACKING.md  API_V25R2_REVIEW_REPORT.md  BaselineVaultAPITest.ipynb  JupyterTests.ipynb  JupyterTests.md  LOGGING.md  MCP_IMPLEMENTATION_STATUS.md  VeevaVaultAPIDocs25R2.html  exceptions.py  test_credentials_template.py
api_docs/: VaultAPIDocs.md  Verify25R2.md  split_api_docs.py
api_docs/sections/: 01_authentication.md  02_direct_data.md  03_vault_query_language_vql.md  04_metadata_definition_language_mdl.md  05_documents.md  06_binders.md  07_vault_objects.md  08_document_and_binder_roles.md  09_workflows.md  10_document_lifecycle_workflows.md  11_object_lifecycle_workflows.md  12_users.md  13_scim.md  14_groups.md  15_picklists.md  16_expected_document_lists.md  17_security_policies.md  18_domain_information.md  19_configuration_migration.md  20_sandbox_vaults.md  21_logs.md  22_file_staging.md  23_vault_loader.md  24_bulk_translation.md  25_jobs.md  26_vault_java_sdk.md  27_custom_pages.md  28_clinical_operations.md  29_qualitydocs.md  30_qms.md  31_batch_release.md  32_qualityone.md  33_qualityone_haccp.md  34_rim_submissions_archive.md  35_rim_submissions.md  36_safety.md  37_veeva_sitevault.md  38_errors.md  README.md
client/: vault_client.py
mcp_planning/: README.md
mcp_planning/01_architecture_design/: MCP_ARCHITECTURE_DESIGN.md
mcp_planning/02_user_personas/: VEEVA_VAULT_USER_PERSONAS.md
mcp_planning/03_user_stories/: USER_STORIES_SUMMARY.md
mcp_planning/04_technical_implementation/: MCP_AUTHENTICATION_EXPLAINED.md  TECHNICAL_IMPLEMENTATION_PLAN.md  UPDATED_TECHNICAL_PLAN.md
mcp_planning/05_implementation_roadmap/: IMPLEMENTATION_ROADMAP.md
notebook_tests/: 01_authentication.ipynb  01_authentication.md  01_authentication_results.md  02_direct_data.ipynb  02_direct_data.md  02_direct_data_results.md  03_vault_query_language_vql.ipynb  03_vault_query_language_vql.md  03_vault_query_language_vql_results.md  04_metadata_definition_language_mdl.ipynb  04_metadata_definition_language_mdl.md  04_metadata_definition_language_mdl_results.md  05_documents.ipynb  05_documents.md  05_documents_results.md  06_binders.ipynb  06_binders.md  06_binders_results.md  07_business_models.ipynb  07_business_models_results.md  07_vault_objects.md  08_document_and_binder_roles.md  08_document_binder_roles.ipynb  08_document_binder_roles_results.md  09_workflows.ipynb  09_workflows.md  09_workflows_results.md  10-11_document_object_lifecycle_workflows_results.md  10_document_lifecycle_workflows.ipynb  10_document_lifecycle_workflows.md  10_jobs.ipynb  10_jobs_setup.ipynb  11_audit.ipynb  11_object_lifecycle_workflows.ipynb  11_object_lifecycle_workflows.md  12_users.ipynb  12_users.md  13_groups.ipynb  13_scim.ipynb  13_scim.md  (+56 more)
services/applications/: __init__.py
services/authentication/: __init__.py  auth_service.py
services/binders/: __init__.py  base_service.py  binder_service.py  binding_rules_service.py  creation_service.py  deletion_service.py  documents_service.py  export_service.py  lifecycle_service.py  relationships_service.py  retrieval_service.py  roles_service.py  sections_service.py  templates_service.py  update_service.py
services/bulk_translation/: __init__.py  bulk_translation.py
services/configuration_migration/: __init__.py  configuration_migration.py
veevavault-mcp-server/: .env.example  .gitignore  GETTING_STARTED.md  MCP_GAP_ANALYSIS.md  MCP_IMPROVEMENTS_ANALYSIS.md  MCP_REVIEW_AND_RECOMMENDATIONS.md  NEXT_STEPS.md  README.md  TOOLS_REFERENCE.md  TROUBLESHOOTING.md  pyproject.toml
veevavault-mcp-server/src/veevavault_mcp/: __init__.py  __main__.py  config.py  server.py
veevavault-mcp-server/src/veevavault_mcp/auth/: __init__.py  manager.py  models.py  username_password.py
veevavault-mcp-server/src/veevavault_mcp/tools/: __init__.py  audit.py  base.py  documents.py  file_staging.py  groups.py  metadata.py  objects.py  tasks.py  users.py  vql.py  workflows.py
veevavault-mcp-server/src/veevavault_mcp/utils/: __init__.py  errors.py  http.py
veevavault-mcp-server/tests/: conftest.py  test_auth_models.py  test_config.py  test_errors_enhanced.py  test_tools_base.py  test_tools_documents.py  test_tools_file_staging.py  test_tools_objects.py  test_tools_tasks.py  test_tools_users.py  test_tools_vql.py  test_tools_workflows.py  test_username_password_auth.py
(+139 files in other folders)
